[tool]
[tool.poetry]
name = "jetkit"
version = "0.0.0"
description="Glorious collection of bespoke artisanal reusable Python/Flask/SQLA code and utilities."
authors = []

[tool.poetry.dependencies]
python = "^3.7"
aws-xray-sdk = "*"
boto3 = "*"
dataclasses-json = "*"
email-normalize = "*"
flask = "*"
flask-cors = "*"
flask-jwt-extended = "*"
flask-script = "*"
flask-smorest = "*"
flask-sqlalchemy = "*"
furl = "*"
marshmallow = "*"
marshmallow-enum = "*"
marshmallow-sqlalchemy = "*"
psycopg2 = "*"
pytest-factoryboy = "*"
pytest-sqlalchemy = "*"
requests = "*"
sqlalchemy = "*"
themis-docs = "*"
webargs = "==5.4.0"
werkzeug = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
bento-cli = "*"
black = "==19.10b0"
epc = "*"
faker = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
importmagic = "*"
ipdb = "*"
ipython = "*"
moto = "*"
mypy = "*"
mypy-extensions = ">=0.4.1"
pep8-naming = "*"
pudb = "*"
pytest = "*"
pytest-flask-sqlalchemy = "*"
pytest-mock = "*"
pytest-postgresql = "*"
pytest-xdist = "*"
watchdog = "*"
yapf = "*"
yaspin = "*"
